--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^3.0.2",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
