--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^3.0.2",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
