--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@heroui/modal": "^2.2.16",
+    "@heroui/toast": "^2.0.9",
     "@kinde-oss/kinde-auth-nextjs": "^2.6.2",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
